# magma

./: .gitignore
docker/: DockerfileAnalisys  DockerfileEnumetric
fuzzers/aflplusplus_asan_analisys/: preinstall.sh
fuzzers/enumeration_finder/: build.sh  fetch.sh  instrument.sh  preinstall.sh
fuzzers/enumetric_asan/: build.sh  fetch.sh  instrument.sh  preinstall.sh
fuzzers/enumetric_asan/fuzzy-potato/: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt
fuzzers/enumetric_asan/fuzzy-potato/include/: common.hpp
fuzzers/enumetric_asan/fuzzy-potato/include/managershmem/: manager.hpp
fuzzers/enumetric_asan/fuzzy-potato/include/pass/: dbg_type_info.hpp  dbg_value_info.hpp  dump_instrumenter.hpp  fuzzy_pass.hpp  instnamer_module.hpp  origin.hpp
fuzzers/enumetric_asan/fuzzy-potato/include/runtime/: dump_rt.hpp
fuzzers/enumetric_asan/fuzzy-potato/lib/: CMakeLists.txt
fuzzers/enumetric_asan/fuzzy-potato/lib/managershmem/: CMakeLists.txt  manager.cpp  tester.cpp
fuzzers/enumetric_asan/fuzzy-potato/lib/pass/: CMakeLists.txt  dbg_type_info.cpp  dbg_value_info.cpp  dump_instrumenter.cpp  fuzzy_pass.cpp  instnamer_module.cpp  main.cpp
fuzzers/enumetric_asan/fuzzy-potato/lib/runtime/: CMakeLists.txt  dump_rt.cpp
tools/analisys/: crash_analisys.py  dependence_analisys.py  start_analisys.sh
tools/analisys/shared_analisys_tools/: crash_to_magmaid.sh  extractor_lines.py  (+3 more)
tools/captain/: build.sh  buildAnalisys.sh  start_analisys.sh
tools/report_df/: BenchmarkData.py  DataProcessing.py  MatplotlibPlotter.py  ReportGeneration.py  main.py
(+2 files in other folders)
